<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Import" />
        <item
            android:id="@+id/nav_auto"
            android:icon="@drawable/ic_car"
            android:title="@string/Cars" />
        <item
            android:id="@+id/nav_motocycle"
            android:icon="@drawable/ic_motocycle"
            android:title="@string/Motocyles" />
        <item
            android:id="@+id/nav_Favorites"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/Favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/Search" />
    </group>

    <item android:title="Γενικά">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Settings" />
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_profile"
                android:title="@string/Profil" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/Logout" />
        </menu>
    </item>

</menu>
