<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Στοιχεία"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!--  Username Label -->
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:inputType="textCapWords"
                android:text="Username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary" />

            <!--  Name Label -->
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:inputType="textCapWords"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary" />

            <!--  Surname Label -->
            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:inputType="textCapWords"
                android:text="@string/surname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary" />

            <!-- Email Label -->
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>